<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/FioText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/fio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idText" />

    <EditText
        android:id="@+id/ExperienceText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/exp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FioText" />

    <EditText
        android:id="@+id/PhoneText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/stack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExperienceText" />

    <EditText
        android:id="@+id/AgeText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:onClick="SaveInstance"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/AgeText"
        app:layout_constraintStart_toEndOf="@+id/AgeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idvw"
        android:layout_marginTop="10dp"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeText" />
    <TextView
        android:id="@+id/fioTV"
        android:text="@string/fiovw"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"/>
    <TextView
        android:id="@+id/experienceTV"
        android:text="@string/expvw"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="400dp"/>
    <TextView
        android:id="@+id/stackTV"
        android:text="@string/stackvw"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="450dp"/>
    <TextView
        android:id="@+id/ageTV"
        android:text="@string/agevw"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="500dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>